# wukong-androidndk

./: build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/wukong_demo_lowversion/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/wukong_demo_lowversion/: MainActivity.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/wukong_demo_lowversion/: ExampleUnitTest.java
findcard/: build.gradle
findcard/src/androidTest/java/com/example/findcard/: ExampleInstrumentedTest.java
findcard/src/main/: AndroidManifest.xml
findcard/src/main/cpp/: CMakeLists.txt  SoFindCard.cpp  SoFindCard.h  TLMicLog.h  Threads.cpp  Threads.h  com_example_findcard_FindcardTest.cpp
findcard/src/main/cpp/findcard1.3.8/decry/base64/: Base64.h
findcard/src/main/cpp/findcard1.3.8/decry/serinumdes/: Abstdescheck.h  des.cpp  des.h  descheck.cpp  descheck.h
findcard/src/main/cpp/findcard1.3.8/factory/: Mcreater.cpp  Mcreater.h
findcard/src/main/cpp/findcard1.3.8/findcard/: findcard.cpp  findcard.h  findcardtype.h
findcard/src/main/cpp/findcard1.3.8/globalenv/: ivconfig.h
findcard/src/main/cpp/findcard1.3.8/indentyvertion/: Abstindentyvertion.h  indentyvertion.cpp  indentyvertion.h
findcard/src/main/cpp/findcard1.3.8/tlcurl/curl/: curl.h
findcard/src/main/cpp/findcard1.3.8/tlcurllibmake/: Android.mkbak  CMakeLists.txt  FindCardHid.cpp  FindCardHid.h  tlmicdes.cpp
findcard/src/main/cpp/findcard1.3.8/tljson/: autolink.h  forwards.h  json.h  reader.h  value.h  writer.h
findcard/src/main/cpp/findcard1.3.8/tlpfinfo/: platforminfo.h
findcard/src/main/cpp/findcard1.3.8/tlurlrule/: urlrule.h
findcard/src/main/java/com/example/findcard/: FindcardTest.java  MainActivity.java
findcard/src/main/res/layout/: activity_main.xml
findcard/src/main/res/values/: strings.xml
findcard/src/test/java/com/example/findcard/: ExampleUnitTest.java
glabc/: build.gradle
glabc/src/androidTest/java/com/example/glabc/: ExampleInstrumentedTest.java
glabc/src/main/: AndroidManifest.xml
glabc/src/main/cpp/: CMakeLists.txt  GLABC_config.cpp  GLABC_config.h  GLCommon.h  GLShaderToProgram.cpp  GLShaderToProgram.h  MyGLRenderContext.cpp  MyGLRenderContext.h  NativeImage.h  TLMicLog.h  glabc_jni.cpp
glabc/src/main/cpp/FreeImage/: CMakeLists.txt  ImageLoad.cpp  ImageLoad.h
glabc/src/main/cpp/FreeImage/Source/LibPNG/: pngpriv.h
glabc/src/main/cpp/FreeImage/Source/LibRawLite/internal/: dcraw_common.cpp
glabc/src/main/cpp/FreeImage/Source/LibRawLite/src/: libraw_cxx.cpp
glabc/src/main/cpp/ShapeObj/: CMakeLists.txt  GLShaderToProgram.cpp  GLShaderToProgram.h  ShapeObj.h  TextureObj.cpp  TextureObj.h  TextureUnitsYUVObj.cpp  TextureUnitsYUVObj.h  VertexObj.cpp  VertexObj.h
glabc/src/main/cpp/libyuv/: CMakeLists.txt
glabc/src/main/cpp/libyuv/include/libyuv/: convert.h  convert_argb.h  convert_from.h  convert_from_argb.h  cpu_id.h  planar_functions.h  row.h  scale_row.h  video_common.h
glabc/src/main/java/com/example/fragments/: Fragment1.java  Fragment2.java  Fragment3.java  Fragment4.java
glabc/src/main/java/com/example/glabc/: AppUtil.java  MainActivity.java  MyGLSurfaceView.java  MyNativeRender.java  XLog.java
glabc/src/main/res/layout/: activity_main.xml  bage_hint.xml  fragment_1.xml  fragment_2.xml  fragment_3.xml  fragment_4.xml  menu_navigation.xml  navigationview_header.xml  vip_view.xml
glabc/src/main/res/values/: strings.xml
glabc/src/test/java/com/example/glabc/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
hash-md5/: build.gradle
hash-md5/src/androidTest/java/com/example/hash_md5/: ExampleInstrumentedTest.java
hash-md5/src/main/: AndroidManifest.xml
hash-md5/src/main/cpp/: CMakeLists.txt  TLMicLog.h  com_example_hash_md5_MD5Check.cpp
hash-md5/src/main/cpp/hashlibpp/: CMakeLists.txt
hash-md5/src/main/java/com/example/hash_md5/: MD5Check.java  MainActivity.java
hash-md5/src/main/res/layout/: activity_main.xml
hash-md5/src/main/res/values/: strings.xml
hash-md5/src/test/java/com/example/hash_md5/: ExampleUnitTest.java
jvmmanager/: build.gradle
jvmmanager/src/main/: AndroidManifest.xml
jvmmanager/src/main/cpp/: CMakeLists.txt  JniThreadCallJavaCallBack.cpp  JniThreadCallJavaCallBack.h  JniThreadTest.cpp  JniThreadTest.h  TLMicLog.h  com_example_jvmmanager_JavaThreadCallTest.cpp
jvmmanager/src/main/cpp/jvmmanager/: CMakeLists.txt  JniThreadEnvManager.cpp  JniThreadEnvManager.h  JvmOBJ.cpp  JvmOBJ.h
jvmmanager/src/main/res/layout/: activity_main.xml
jvmmanager/src/main/res/values/: strings.xml
micserialnumdes/: build.gradle
micserialnumdes/src/main/: AndroidManifest.xml
micserialnumdes/src/main/cpp/: CMakeLists.txt  TLMicLog.h  com_example_micserialnumdes_MicnumDecode.cpp  tlmicdes.h
micserialnumdes/src/main/res/layout/: activity_main.xml
micserialnumdes/src/main/res/values/: strings.xml
oboe-channelresampler/: build.gradle
oboe-channelresampler/src/main/: AndroidManifest.xml
oboe-channelresampler/src/main/cpp/: CMakeLists.txt  com_example_oboe_channelresampler_ResamplerTest.cpp
oboe-channelresampler/src/main/cpp/libs/include/: wktimer.h
oboe-channelresampler/src/main/cpp/resampler/: CMakeLists.txt  LinearResampler.cpp  OboeResampler.cpp  OboeResampler.h
oboe-channelresampler/src/main/res/layout/: activity_main.xml
oboe-channelresampler/src/main/res/values/: strings.xml
timer/: build.gradle
timer/src/main/cpp/: CMakeLists.txt  TLMicLog.h  com_example_timer_TimerBlock.cpp
timer/src/main/cpp/timer/: AFormatTools.cpp  AFormatTools.h  CMakeLists.txt  wktimer.cpp
timer/src/main/res/layout/: activity_main.xml
webrtcsingelproc/: build.gradle
webrtcsingelproc/src/main/: AndroidManifest.xml
webrtcsingelproc/src/main/cpp/: CMakeLists.txt  TLMicLog.h  agc_jni.cpp
webrtcsingelproc/src/main/cpp/libs/include/: OboeResampler.hh  wktimer.h
webrtcsingelproc/src/main/cpp/signalproc/: CMakeLists.txt  analog_agc.c
webrtcsingelproc/src/main/res/values/: strings.xml
(+19 files in other folders)
